# wordpress-backup

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  wp_backup.py
tests/: test_wp_backup.py
