[tool.poetry]
name = "wordpressdotcom-backup"
version = "0.1.0"
description = "A tool to backup WordPress.com blog posts"
authors = ["Deep Voice Daddy <deepvoicedaddy@example.com>"]
repository = "https://github.com/deepvoicedaddy/wordpressdotcom-backup"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
markdown = "^3.5.1"
python-frontmatter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pytest = "^7.2.2"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"